<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <ImageView
        android:src="@drawable/thorndalemart_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/title_text_size"
        android:fontFamily="sans-serif"
        android:textColor="@color/text_color"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/store_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textColor="@color/text_color"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/grocery_store" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/address_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/address_value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="Phone:"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/text_color"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="123-456-7890"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textColor="@color/text_color"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:text="@string/description_title"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorAccent"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/description_text"
        android:textStyle="italic"
        />

</LinearLayout>

